--- a/configure.in
+++ b/configure.in
@@ -1,8 +1,41 @@
-AC_INIT
-AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(tempus, 1.0)
-AC_PROG_CC
+AC_PREREQ(2.60)
+AC_INIT([tempusmud], [1.0], [azimuth@tempusmud.com])
+AC_CONFIG_SRCDIR([src/clan/clan.cc])
+AC_CONFIG_HEADER([config.h])
+AM_INIT_AUTOMAKE([tempusmud], [1.0])
+
+# Checks for programs.
 AC_PROG_CXX
+AC_PROG_CC
+
+# Checks for libraries.
 AC_CHECK_POSTGRES
 AM_PATH_XML2([2.6.0])
-AC_OUTPUT(Makefile m4/Makefile src/Makefile)
+
+# Checks for header files.
+AC_HEADER_DIRENT
+AC_HEADER_STDC
+AC_HEADER_SYS_WAIT
+AC_CHECK_HEADERS([fcntl.h limits.h malloc.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])
+
+# Checks for typedefs, structures, and compiler characteristics.
+AC_HEADER_STDBOOL
+AC_C_CONST
+AC_C_INLINE
+AC_C_RESTRICT
+AC_TYPE_SIZE_T
+AC_HEADER_TIME
+AC_STRUCT_TM
+
+# Checks for library functions.
+AC_FUNC_CLOSEDIR_VOID
+AC_FUNC_MALLOC
+AC_FUNC_MKTIME
+AC_FUNC_REALLOC
+AC_FUNC_SELECT_ARGTYPES
+AC_FUNC_STAT
+AC_FUNC_STRFTIME
+AC_CHECK_FUNCS([bzero gethostbyaddr gettimeofday isascii memmove memset mkdir select socket strcasecmp strchr strdup strerror strncasecmp strpbrk strspn strstr strtol])
+
+AC_CONFIG_FILES([Makefile m4/Makefile src/Makefile])
+AC_OUTPUT
